--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web store for tires"
+      content="Онлайн магазин за гуми за мотоциклети"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
